# wnc-proposal-assistant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pyproject.toml.bak  requirements.txt
app/: main.py
app/models/: schemas.py
app/routes/: export.py  generate.py
app/services/: citations.py  exporter.py  generator.py  postprocess.py  retriever.py
debugging/patches/: wnc-sanitizer.patch
scripts/: eval_retrieval.py  ingest.py  ingest_orig.py  seed_minimal.py
tests/: day5_e2e.ps1  day5_e2e_min.ps1  sanitizer-tests.py  test_sanitizer.py
ui/: app.py
wnc_proposal_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
